# Multi-Modal-Enterprise-Knowledge-Synthesis-Platform

./: .dockerignore  .env.docker  .env.example  .gitignore  Docker.MD  Makefile  README.md  Windows_README.md  backend.py  dirty_test.xlsx  docker-compose.yml  docker-entrypoint.sh  dockerfile  frontend.py  main.py  pyproject.toml  reindex.py  req.txt  requirements-docker.txt  requirements.txt  requirements_freezed.txt  test.sh
agent/: builder.py  combination.py  decomposition.py  graph_helpers.py  graph_nodes.py  state.py
agent/tools/: search.py  sql_query.py
app/: main.py  socket_handler.py
app/middlewares/: auth.py  auth_paths.py
app/routes/: documents.py  export.py  extra.py  health.py  insights.py  query.py  strategic_roadmap.py  technical_roadmap.py  thread.py  upload.py  user.py
core/: Setup_Local_ollama.md  config.py  constants.py  database.py
core/embeddings/: embeddings.py  retriever.py  vectorstore.py
core/llm/: client.py  outputs.py  unload_ollama_model.py
core/models/: document.py  gpu_config.py  user.py
core/parsers/: excel_utils.py  extensions.py  future_improvements.md  image.py  main.py  process_files.py  slide_export.py  vlm.py
core/services/: sqlite_manager.py  upload_files.py
core/studio_features/: insights.py  (+5 more)
docs/: MODEL_CONFIGURATION.md
frontend/: README.md  config.ts  package-lock.json  package.json
nginx/: default.conf
scripts/: install_ollama_Linux.sh  install_tesseract.sh  model_oss  setmodel.sh  setmodel_vlm.sh
tests/: generate_test_excel.py  verify_excel_utils.py  verify_full_parsing.py  verify_main_import.py
(+59 files in other folders)
